README.md: add usage information

--- a/example/package.json
+++ b/example/package.json
@@ -5,11 +5,9 @@
   "main": "js/index.js",
   "type": "module",
   "module": "js/index.js",
-  "scripts": {
-    "build": "echo \"The 'build' script is run by the editor and should produce your application bundle\""
-  },
   "keywords": [
-    "wonderland-engine"
+    "wonderland-engine",
+    "performance"
   ],
   "dependencies": {
     "@wonderlandengine/api": "^1.0.1",
