--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "homepage": "https://https://github.com/DavidPeicho/wle-stats",
   "repository": "git@github.com:DavidPeicho/wle-stats.git",
   "author": "David Peicho <david.peicho@gmail.com>",
   "license": "MIT",
   "wonderlandengine": {},
+  "files": [
+    "dist/",
+    "README.md"
+  ],
   "devDependencies": {
     "@wonderlandengine/api": "^1.0.1",
     "typescript": "^5.1.6"
