--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "repository": "git@github.com:DavidPeicho/wle-stats.git",
   "author": "David Peicho <david.peicho@gmail.com>",
   "license": "MIT",
+  "keywords": [
+    "wonderlandengine",
+    "performance",
+    "graphics",
+    "webgl"
+  ],
   "wonderlandengine": {},
   "files": [
     "dist/",
