--- a/package.json
+++ b/package.json
@@ -20,13 +20,6 @@
     "dist/",
     "README.md"
   ],
-  "devDependencies": {
-    "@wonderlandengine/api": "^1.0.1",
-    "typescript": "^5.1.6"
-  },
-  "peerDependencies": {
-    "@wonderlandengine/api": "^1.0.1"
-  },
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
@@ -34,6 +27,14 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "gl-matrix": "^3.4.3",
     "prettier": "^3.0.0"
+  },
+  "peerDependencies": {
+    "@wonderlandengine/api": "^1.0.1"
+  },
+  "devDependencies": {
+    "@wonderlandengine/api": "^1.0.1",
+    "typescript": "^5.1.6"
   }
 }
